<resources>
    <string name="app_name">HiitTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="editButtonText">Edit</string>
    <string name="runButtonText">Run</string>
    <string name="intervalNameText">Interval</string>
    <string name="reps">Reps</string>
    <string name="empty_state_main">You don\'t currently have a workout created.</string>
    <string name="create_workout">Create Workout</string>
    <string name="empty_state_edit">You don\'t currently have a workout created.</string>
    <string name="save_workout">Save Workout</string>
    <string name="quit_editing">Quit Editing</string>
    <string name="settings">Settings</string>
    <string name="quit_app">Quit App</string>
    <string name="title_activity_test">testActivity</string>
    <string name="handle">Handle</string>
    <string name="warmupRowString">Warmup</string>
    <string name="cooldownRowString">Cooldown</string>
    <string name="highRowString">High</string>
    <string name="lowRowString">Low</string>
    <string name="cancel">Cancel</string>
</resources>
