<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/mainTopBar"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        >
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:id="@+id/quitButton"
            android:onClick="onClickQuit"
            android:src="@drawable/icon_exit"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/quit_app"
            />

        <TextView
            android:id="@+id/mainActivityTopBarTV"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_toEndOf="@id/quitButton"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_toStartOf="@id/settingsButton"/>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/settingsButton"
            android:onClick="onClickSettings"
            android:background="@color/colorPrimary"
            android:src="@drawable/icon_setting"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/settings"

            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <view class="android.support.v7.widget.RecyclerView"
        android:id="@+id/workoutRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/mainTopBar"
        android:layout_above="@id/editOrRunButtons"
        android:visibility="visible"
        >
    </view>

    <LinearLayout
        android:id="@+id/mainActivityEmptyStateView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/mainTopBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:textSize="20sp"
            android:text="@string/empty_state_main"
            android:gravity="center"/>
        <Button
            android:id="@+id/createWorkoutButton"
            android:text="@string/create_workout"
            android:onClick="onClickEdit"
            android:padding="20sp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editOrRunButtons"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        >
        <TextView
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:id="@+id/editButton"
            android:textSize="20sp"
            android:padding="10dp"
            android:gravity="center"
            android:onClick="onClickEdit"
            android:text="@string/editButtonText" />
        <TextView
            android:id="@+id/runButton"
            android:textSize="20sp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:onClick="onClickRun"
            android:text="@string/runButtonText"
           />

    </LinearLayout>

</RelativeLayout>