<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/editWorkoutTopBar"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        >
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/editQuitButton"
            android:onClick="onClickQuitEdit"
            android:src="@drawable/icon_back"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/quit_editing"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_alignParentStart="true"
            />
        <TextView
            android:id="@+id/editActivityTV"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_alignStart="@+id/editQuitButton"
            android:layout_alignEnd="@id/editSaveButton"/>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/editSaveButton"
            android:onClick="onClickSaveEdit"
            android:src="@drawable/icon_save"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/save_workout"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <view class="android.support.v7.widget.RecyclerView"
        android:id="@+id/editRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/mainTopBar"
        android:layout_above="@id/editOrRunButtons"
        android:visibility="visible"
        >
    </view>

    <LinearLayout
        android:id="@+id/mainActivityEmptyStateView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/mainTopBar"
        android:layout_above="@id/editOrRunButtons"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:textSize="20sp"
            android:text="@string/empty_state_edit"
            android:gravity="center"/>
        <Button
            android:id="@+id/createWorkoutButton"
            android:text="@string/create_workout"
            android:padding="20sp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="onClickStartNewWorkout"
            android:gravity="center"/>
    </LinearLayout>


</RelativeLayout>